--- a/app/views/providers/inbox.html.erb
+++ b/app/views/providers/inbox.html.erb
@@ -1,5 +1,6 @@
 <%= render 'providers/header' %>
 
+<div class="main-container">
 <div class="bootstrap">
 
 <div class="mailbox_wrapper">
@@ -11,3 +12,4 @@
 
 
 
+</div>
