--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,7 @@
 <%= render 'providers/header' %>
 
+
+<div class="main-container">
 <div class="listing_wrapper">
 <h1>掲載中サービス</h1>
 
@@ -49,5 +51,5 @@
 
 
 
-
+</div>
 </div>
