--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -1,9 +1,8 @@
 
 .providers_info_show{
-
-width:65%;
-    margin-top:4%;
-    margin-left:19%;
+    width:100%;
+    margin-top:50px;
+    margin-left:0%;
     margin-bottom: 10%;
 }
 
@@ -13,6 +12,7 @@ width:65%;
     border-left: solid 3px #6495ED;
     font-size: 16px;
     font-weight: 700;
+
 }
 
 
@@ -20,8 +20,8 @@ width:65%;
 .providers_info_show h2{
     font-weight:normal;
     font-size: 30px;
-clear:both;
 
+    width:50%;
 }
 
 
@@ -49,7 +49,10 @@ clear:both;
 .provider_delete_btn:active{box-shadow:0 0 ;margin-top:4%; }
 
 
-.edit-button{margin-left:81%}
+.edit-button{
+float:right;
+clear:both;
+}
 
 
 
@@ -76,8 +79,15 @@ clear:both;
 }
 
 .edit-button{
-    margin-left:45%
+   display:none;
 }
+
+
+.providers_info_show h2{
+    width:80%;
+}
+
+
 
 
 }
@@ -96,8 +106,9 @@ width:100%;
     margin-bottom: 10%;
 }
 
+
 .edit-button{
-    margin-left:45%
+   display:none;
 }
 
 
@@ -118,12 +129,13 @@ width:100%;
 }
 
 .edit-button{
-    margin-left:40%
+   display:none;
 }
 
 
 .providers_info_show h2{
     font-size: 20px;
+        width:80%;
 }
 
 .providers_info_show h3{
