--- a/app/views/providers/index.html
+++ b/app/views/providers/index.html
@@ -1,5 +1,8 @@
 <%= render 'providers/header' %>
 
+
+
+<div class="main-container">
 <div class="providers_info_show">
 
 
@@ -58,3 +61,4 @@
 
 </div>
   <%end%>
+</div>
