--- a/app/assets/stylesheets/home/mobilehead.css
+++ b/app/assets/stylesheets/home/mobilehead.css
@@ -3,6 +3,10 @@
     margin:0 auto;
 }
  
+ .web-menu-var{
+
+    border-bottom: 2px solid #f5f5f5;
+ }
 
  .upper-menu,.upper-menu ul li:hover{
     -webkit-tap-highlight-color:transparent
