--- a/app/assets/stylesheets/notes/index.css
+++ b/app/assets/stylesheets/notes/index.css
@@ -24,8 +24,8 @@ clear:both;
 }
 
 .list-number-2{
-  margin-left: 300px;
-margin-top: 50px;
+  margin-left: 450px;
+margin-top: 10%;
 clear:both;
 
 }
