--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -44,7 +44,7 @@
 
 
 
-<div class="main-top-wrapper">
+<div class="main-container">
 
   <div class="explain-seekle-wrapper">
     <div class="explain-seekle-wrapper-content">
@@ -53,7 +53,6 @@
       <h2>注目のサービス</h2>
       <p>Seekleでのおすすめサービスです</p>
    
-
 
 <div class="seekle_favs_left">
 <p>住まい</p>
@@ -199,6 +198,9 @@
 
 </div>
 
+  </div>
+
+
   <div class="message-wrapper">
 
       <div class="heading">
@@ -214,5 +216,3 @@
 
 
 
-
-  </div>
