--- a/app/views/notes/housing.html.erb
+++ b/app/views/notes/housing.html.erb
@@ -9,6 +9,8 @@
 </div>
 
 
+<div class="main-container">
+
 <div class="published_service_wrapper">
 
  <div class="left-other-housing">
@@ -19,22 +21,11 @@
    <br/>
    <br/>
 
-     <li>不用品回収</li>
-     <li>リモデル</li>
-     <li>畳張替え</li>
-     <li>障子張替え</li>
-     <li>網戸張替え</li>
-     <li>大工、木工</li>
-     <li>遺品整理</li>
-     <li>家事代行</li>
-     <li>屋根、雨漏り</li>
-     <li>エアコン</li>
-     <li>ハウス</li>
-     <li>お風呂</li>
-     <li>水回り</li>
-     <li>庭お手入れ</li>
-     <li>その他</li>
-  
+
+<% @housecategories.each do |house| %>
+
+<li><%= house.name %></li>
+<% end %>
    <br><br>
    <h2>ご利用にあたって</h2>
 
@@ -94,3 +85,4 @@
 </div>
 
 
+</div>
