--- a/app/views/category/housing.html.erb
+++ b/app/views/category/housing.html.erb
@@ -1,7 +1,12 @@
+     
+
      <%= render 'category/header' %>
      
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
+
+
+
 <div class="home-all-wrapper">
 
 
@@ -13,16 +18,16 @@
 
    </div>
 
-
+<div class="main-container">
 
    <div class="categories">
 
-
-
-
     <ul>
-      <div class="bootstrap">
+  
         <h4>住まい ジャンル</h4>
+
+
+            <div class="bootstrap">
        <li><div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/housing" %></h3>
@@ -68,8 +73,6 @@
   <%= link_to image_tag('housing/roof.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
   </li>
-
-
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
@@ -153,4 +156,4 @@
 
  </div>
 
-
+</div>
