--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -1,4 +1,4 @@
-       <%= render 'category/header' %>
+     <%= render 'category/header' %>
 
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
@@ -9,14 +9,13 @@
      <h3>一生の思い出になるイベントをもっと華やかに</h3>
    </div>
 
-
+<div class="main-container">
    <div class="categories">
 
-
+   <div class="bootstrap">
 
 
     <ul>
-      <div class="bootstrap">
         <h4>イベント ジャンル</h4>
          <li><div class="panel panel-default">
        <div class="panel-heading">
@@ -26,10 +25,10 @@
   <%= link_to image_tag( 'event/makeup.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
        </div>
          </li>
-  </div>
+ 
 
 
-<div class="bootstrap">
+
    <li><div class="panel panel-default">
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "結婚式","/notes/event" %></h3>
@@ -38,10 +37,7 @@
 
     </div>
   </li>
-  </div>
 
-
-<div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バーテンディング","/notes/event" %></h3>
@@ -50,10 +46,7 @@
   <%= link_to image_tag( 'event/cocktails.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
-  </div>
-
-
-<div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/event" %></h3>
@@ -64,9 +57,7 @@
 
     </div>
   </li>
-  </div>
-
-  <div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "マジシャン","/notes/event" %></h3>
@@ -75,10 +66,7 @@
   <%= link_to image_tag( 'event/magicianhat.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
-  </div>
-
-
-  <div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/event" %></h3>
@@ -89,10 +77,7 @@
 
     </div>
   </li>
-  </div>
 
-
-  <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "衣装レンタル","/notes/event" %></h3>
@@ -102,12 +87,7 @@
 
     </div>
   </li>
-  </div>
-
-
-
-
-  <div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/event" %></h3>
@@ -117,9 +97,7 @@
 
     </div>
   </li>
-  </div>
 
-  <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/event" %></h3>
@@ -127,13 +105,7 @@
   <%= link_to image_tag('event/shoes.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
-  </div>
-
-
-
-
-
-  <div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コメディアン","/notes/event" %></h3>
@@ -141,9 +113,7 @@
   <%= link_to image_tag('event/microphone.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
-  </div>
-
-    <div class="bootstrap">
+ 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "DJ","/notes/event" %></h3>
@@ -152,11 +122,7 @@
 
     </div>
   </li>
-  </div>
-
-
-
-<div class="bootstrap">
+  
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/event" %></h3>
@@ -171,7 +137,7 @@
 
 
 
-
+</div>
 
 
   </div>
