--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -1,4 +1,4 @@
-     <%= render 'category/header' %>
+       <%= render 'category/header' %>
      
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
@@ -11,7 +11,7 @@
 
 
    </div>
-
+<div class="main-container">
    <div class="categories">
 
 
