--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -1,6 +1,6 @@
 <%= render 'users/header' %>
 <%= render 'home/header/dashboardhead' %>
-
+<div class="main-container">
 
 		<div class="mailbox_wrapper">
 			<div class="bootstrap">
@@ -10,3 +10,4 @@
 	</div>
 </div>
 
+</div>
