--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,11 @@
+
+
 <%= render 'users/header' %>
 <%= render 'home/header/dashboardhead' %>
+
+
+<div class="main-container">
+
 <div class="mypage-all_wrapper">
 
   <h1><%= current_user.name %>さんのページ  </h1>
@@ -29,4 +35,7 @@
 		 <% end %>
 		</div>
 	 </div>
+</div>
+
+
 </div>
