--- a/app/views/notes/profile.html
+++ b/app/views/notes/profile.html
@@ -5,6 +5,8 @@
 </div>
 <%= render 'home/header/dashboardhead' %>
 
+
+<div class="main-container">
 <div class="provider_wrapper">
   <div class="provider-introduction_profile">
 
@@ -70,6 +72,6 @@
    <% end %>
 </ul>
 </div>
-
+</div>
 </div>
 </div>
