--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -25,7 +25,7 @@
 
 
 <div class="bootstrap">
-
+<div class="main-container">
 
 <div class="mailbox_wrapper">
 <div class="bootstrap">
@@ -89,3 +89,4 @@
   </div>
 
 
+</div>
