--- a/app/views/mailbox/sent.html.erb
+++ b/app/views/mailbox/sent.html.erb
@@ -2,6 +2,7 @@
 <%= render 'home/header/dashboardhead' %>
 
 
+<div class="main-container">
  
   <div class="mailbox_wrapper">
    <div class="bootstrap">
@@ -9,4 +10,5 @@
    </div>
   </div>
  </div>
+</div>
 </div>
