--- a/app/views/providers/profile.html.erb
+++ b/app/views/providers/profile.html.erb
@@ -1,6 +1,6 @@
 <%= render 'providers/header' %>
 
-
+<div class="main-container">
 <div class="provider_wrapper">
   <div class="provider-introduction_profile">
  <h1><%= current_provider.name %>さんのページ  </h1>
@@ -59,3 +59,4 @@
 
 </div>
 <% end %>
+</div>
