--- a/app/assets/stylesheets/users/reservations/list.css
+++ b/app/assets/stylesheets/users/reservations/list.css
@@ -16,7 +16,12 @@
 
 
 
+.reservation_history_wrapper h3 {
+    padding-top: 40px;
+    width: 100%;
 
+
+}
 
 
 
@@ -135,7 +140,7 @@ margin-left: 80%;
 }
  .reservation_history_wrapper h3{
     font-size: 16px;
-
+clear:both;
 }
 
 
