--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <%= render 'home/header/dashboardhead' %>
+<div class="main-container">
 <div class="bootstrap">
  <div class="content_in_user">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -9,7 +10,7 @@
 
   <div class="field">
     <%= f.label :ユーザーネーム %><br />
-    <%= f.text_field :name,  autofocus: true  %>
+    <%= f.text_field :name,  autofocus: true ,maxlength: "10"%>
   </div>
 
 
@@ -45,4 +46,5 @@
 
 <%= render "devise/shared/links"%>
   </div>
+</div>
 </div>
