--- a/app/assets/stylesheets/home/registration/provider_registration.css
+++ b/app/assets/stylesheets/home/registration/provider_registration.css
@@ -189,11 +189,18 @@ margin-top: 30px;
 
 /* MAC */
 @media screen and (min-width: 800px) {
+
+
 .providers_signup{
     width:100%;
-    margin-top:6%;
-    margin-left:26%;
-    margin-bottom: 10%;
+ margin:0 auto;
+  margin-top:8%;
+    margin-bottom:8%;
+}
+
+.provider_login{
+    margin:0 auto;
+   width:66%;
 }
 
 .providers_signup h3{
@@ -210,11 +217,8 @@ margin-top: 30px;
     clear:both;
 }  
 
-
 .provider_join_btn{
-
-    margin-left:13%;
-    margin-bottom:10%;
+margin:0 auto;
     font-size:16px;
     font-weight:700;
     text-decoration:none;
@@ -226,9 +230,10 @@ margin-top: 30px;
     color:#fff;
     background-color: #FA8072;
     box-shadow:2px 2px #808080;
-width:21%; 
+width:40%; 
 border-radius:3%;
- margin-top:5%;
+margin-bottom: 4%;
+
 }
 
 
