--- a/app/views/home/signage.html
+++ b/app/views/home/signage.html
@@ -38,10 +38,7 @@
   <ul>
   <li>連絡先：seekle.info@gmail.com</li>
   </ul>
-  <ul>
-
-  <li>電話番号：0798-70-4133</li>
-  </ul>
+ 
    <ul>
 
   <li>代表者：森川恵美</li>
@@ -50,15 +47,15 @@
   <li>支払い方法と期限：現金・クレジットカード(VISA/MASTER)・銀行振込支払期限につきましては取引によって異なります</li>
   </ul>
    <ul>
-  <li>販売価格：各商品ページに記載しています</li>
+  <li>販売価格：各サービスページに記載しています</li>
   </ul>
     <ul>
 
-  <li>返品の取り扱い条件、退会条件：契約期間内であれば、いつでも退会することができます。解約いただくと翌月のサービス提供は行いません。退会は設定画面より行うことが可能です。契約中のサービスが存在する状態での途中退会による返金は承っておりません。</li>
+  <li>返品の取り扱い条件、退会条件：契約期間内であれば、いつでも退会することができます。解約いただくと予約中サービスの提供は行いません。退会は設定画面より行うことが可能です。契約中のサービスが存在する状態での途中退会による返金は承っておりません。</li>
 
   </ul>
  <ul>
-  <li>商品の引渡時期：即時(サービス種によって異なる)</li>
+  <li>商品の引渡時期：サービス種によって異なる</li>
   </ul>
    <ul>
   <li>返金・交換：原則として取引確定後の返金・交換は行っておりません。</li>
