--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<div class="main-container">
+
 <div class="providers_signup">
 
 <div class="forgot-password-wrapper">
@@ -33,4 +35,4 @@
 <%= render "devise/shared/links" %>
   </div>
 
-
+</div>
