Update and rename mobilehead.css to mobilehead.scss

--- a/app/assets/stylesheets/home/mobilehead.scss
+++ b/app/assets/stylesheets/home/mobilehead.scss
@@ -1,3 +1,17 @@
+
+// Media queries breakpoints
+$screen-mobile-xs: 375px !default;
+$screen-mobile-md: 400px !default;
+$screen-mobile: 480px !default;
+$screen-phablet: 620px !default;
+$screen-tablet: 768px !default;
+$screen-desktop: 1024px !default;
+$screen-mobile-max: ($screen-mobile - 1) !default;
+$screen-tablet-max: ($screen-tablet - 1) !default;
+$screen-desktop-max: ($screen-desktop - 1) !default;
+$app-container-width: $screen-desktop !default;
+
+
  .wrapper{
     width:100%;
     margin:0 auto;
@@ -148,9 +162,6 @@
     z-index: 5;
     }
 
-.container_head{
-display: none;
-}
 
 
 
@@ -247,15 +258,16 @@ header#top-head{
 }
 
 /* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (max-width: 414px) {
+@media  (max-width: $screen-phablet) {
 
 
 .logo{
     display:none;
 }
 
-
-
+.container_head{
+display: none;
+}
 }
 
 
