--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -81,23 +81,12 @@ margin:0 auto;
 
 .mypage-all_wrapper h1{
 	float:left;
-	
 
-	font-weight: 500; 
-	 line-height: 1.3em; 
 	 width:100%; 
-	 font-size: 20px;
-}
-
-.notification_header{
-	width:100%;
+	 font-size: 26px;
 }
 
 
-.notification_user{
-	clear:both;
-
-}
 
 
 .notification_user h2{
@@ -133,9 +122,14 @@ width:100%;
 margin:0 auto;
 
 }
+
+
+.mypage-all_wrapper h1{
+
+	 font-size: 20px;
+}
+
 	}
-
-
 
 
 
