--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,9 +1,11 @@
 <%= render 'providers/header' %>
 
+
 <div class="menu-back-head">
   <%= link_to 'サービスページ', @note %> |
   <%= link_to '掲載サービス一覧', notes_path %>
 </div>
+<div class="main-container">
 
 <div class="providers_new_post">
   <div class="bootstrap">
@@ -194,7 +196,7 @@
 <% end %>
 </div>
 </div>
-
+</div>
 <link rel="stylesheet" href="chosen.css">
 
 
