--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-
+ <div class="main-container">
 <div class="providers_new_post">
 <div class="bootstrap">
 <h2>一般アカウント設定</h2>
@@ -92,7 +92,7 @@
   </div>
 </div>
 
-
+</div>
 
 
 
