--- a/app/assets/stylesheets/home/registration/provider_registration.css
+++ b/app/assets/stylesheets/home/registration/provider_registration.css
@@ -3,12 +3,15 @@
 @media screen and (min-width: 320px) and (max-width: 374px)
 {
  
+.provider_login{
+    margin:0 auto;
 
+}
 
 .providers_signup{
-   
+     margin:0 auto;
     margin-top:6%;
-
+   width:88%;
     margin-bottom: 10%;
 }
 
@@ -23,7 +26,7 @@
 .provider_join_btn{
 
 
-    margin-left:18%;
+margin:0 auto;
     margin-bottom:10%;
     font-size:12px;
     font-weight:700;
@@ -44,7 +47,7 @@ border-radius:3%;
 
 .field2 input{
     height:36px;
-    width:273px;
+    width:98%;   
 }
 
 
@@ -67,11 +70,13 @@ border-radius:3%;
 
 
 .providers_signup{
-    width:100%;
+    width:90%;
     margin-top:6%;
-
+margin:0 auto;
     margin-bottom: 10%;
 }
+
+
 
 .providers_signup h2{
     font-weight:normal;
@@ -82,8 +87,7 @@ border-radius:3%;
 
 
 .provider_join_btn{
-
-    margin-left:17%;
+margin:0 auto;
     margin-bottom:10%;
     font-size:14px;
     font-weight:700;
@@ -96,7 +100,7 @@ border-radius:3%;
     color:#fff;
     background-color: #FA8072;
     box-shadow:2px 2px #808080;
-width:50%; 
+width:60%; 
 border-radius:3%;
  margin-top:9%;
 }
@@ -105,7 +109,7 @@ border-radius:3%;
 
 .field2 input{
     height:40px;
-    width:323px;
+    width:98%;
 }
 
 .name_field input{
@@ -124,7 +128,8 @@ border-radius:3%;
 
 
 .providers_signup{
-    width:100%;
+    width:90%;
+    margin:0 auto;
     margin-top:6%;
 
     margin-bottom: 10%;
@@ -153,7 +158,7 @@ margin-top: 30px;
 
 .field2 input{
     height:40px;
-    width:365px;
+    width:98%;
 
 }
 
