--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,7 @@
 <table class="newpost">
 
     <tr>
-     <th> <p>プロフィール写真 <span class="form-label required">必須</span></p></th>
+     <th> <p>プロフィール写真 <span class="form-label optional">任意</span></p></th>
      <td>
      <%= f.file_field :mainpic, class: "form-control image-field" %>
       <%= f.hidden_field :mainpic_cache %>
