--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -39,14 +39,13 @@
    <div class="icons"><i class="fa fa-user fa-5x"></i> </div>
    <h2>登録費、掲載費無料！</h2>
 
-
-
-   <p>初期費用・月額費用・掲載料は、すべて0円。予約確定ではじめて予約手数料が発生します。
+   <p>初期費用・月額費用・掲載料は、すべて0円。予約確定ではじめて売り上げから10%の予約手数料が発生します。
 今なら予約手数料も初回1回は完全無料です。
 
    </p>
 
  </div>
+
 
 
  <div class="reasons2">
