--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -1,4 +1,4 @@
-     <%= render 'category/header' %>
+      <%= render 'category/header' %>
 
     <%= render 'category/responsivemenuvar' %>
 <%= render 'home/header/dashboardhead' %>
@@ -83,7 +83,7 @@
      <h3 class="panel-title"><%= link_to "衣装レンタル","/notes/event" %></h3>
      </div>
         
-  <%= link_to image_tag('event/dresses.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
+  <%= link_to image_tag('event/dresses.jpg', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
