--- a/app/views/layouts/application.html
+++ b/app/views/layouts/application.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html><html lang="en">
 <head>
 
-	<title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
-<%= favicon_link_tag('favicon.ico') %>
+<title>Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！</title>  
 <meta name=”description” content=”ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]”>
+<meta name=”keywords” content=”業者,ポートフォリオ撮影,マッサージ,リフォーム”>
+<meta property="og:title" content="Seekle（シークル）｜ 簡単比較で失敗しないサービス選び！">
+<meta property="og:description"
+     content="ハウスクリーニングやポートフォリオ撮影、マッサージ、カウンセリングなどの各サービス選びに失敗しない！あなたの必要とするサービスをオンラインで無料予約するならSeekle。サービスを利用したユーザーの口コミ、満足度や具体的なサービス料金で簡単・便利に徹底比較！[最大10万円の安心保証つき]">
 
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  <%= csrf_meta_tags %>
+<%= favicon_link_tag('favicon.ico') %>
 </head>
+
+
+
 
 <script src='https://cdn.slaask.com/chat.js'></script>
 <script>
@@ -39,7 +48,9 @@
 	<div class="main_content"> <%= yield %> </div>
 
 		<footer class="footer"> 
+
 			<div class="footer-top"> 
+					<div class="main-container">
 					<div class="footer_content">
 					<div class="col-sm-3"> 
 				
@@ -80,9 +91,10 @@
 							</div>
 						</div>
 					</div> 
-		
+			</div>
+
 			</footer>
-			<div class="footer-bottom"> 
+					<div class="footer-bottom"> 
 	
 						<nav class="widget-menu"> 
 							<li><a href="/home/term">利用規約</a></li>
