--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -25,7 +25,7 @@
 
 </div>
 
-
+<div class="main-container">
 <div class="about-provider-wrapper">
 
  <div class="reasons">
@@ -57,7 +57,7 @@
 
 
 </div>
-
+</div>
 
   <div class="message-wrapper">
 
