--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -1,4 +1,4 @@
-
+ <div class="main-container">
 <div class="providers_info_show">
 <div class="bootstrap">
 
@@ -51,4 +51,4 @@
 </div>
 
 <% end %>
-</div></div>
+</div></div></div>
