--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -88,7 +88,7 @@
 
   <tr>
    <th>
-    <p><%= f.label Note.human_attribute_name '価格(税込)' %><span class="form-label required">必須</span></p></th>
+    <p><%= f.label Note.human_attribute_name '料金(目安)' %><span class="form-label required">必須</span></p></th>
     <td>
       <div class="input-group">
       
