--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -21,9 +21,15 @@
     font-weight:normal;
     font-size: 30px;
 
-    width:50%;
+    width:80%;
 }
 
+
+.providers_info_show  table.sample_03{
+    width:100%;
+    margin-left:0px;
+
+}
 
 
 .providerfield{
@@ -66,43 +72,15 @@ clear:both;
 
 
 
-/* ipad iphone6のレスポンシブデザイン */
-
-@media (max-width: 375px) 
-{
-
-
-.providers_info_show{
-    width:100%;
-    margin-left:5%;
-    margin-bottom: 10%;
-}
-
-.edit-button{
-   display:none;
-}
-
-
-.providers_info_show h2{
-    width:80%;
-}
-
-
-
-
-}
-
-
-
 /* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
 @media screen and (max-width: 414px) {
 
 
 .providers_info_show{
 
-width:100%;
+width:97%;
     margin-top:4%;
-    margin-left:7%;
+margin:0 auto;
     margin-bottom: 10%;
 }
 
